[package]
name = "asynchronous"
version = "0.3.2"
authors = ["bcndanos <bcndanos@users.noreply.github.com>"]
description = "Promises Q style and async"
repository = "https://github.com/bcndanos/asynchronous"
documentation = "http://bcndanos.github.io/asynchronous/asynchronous/"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
num_cpus = "0.2.4"

[[example]]
name = "basic"
path = "examples/basic.rs"
test = false
bench = false

