[package]
name = "asynchronous"
version = "0.4.1"
authors = ["bcndanos <rinnegatobcn@gmail.com>"]
description = "Promises Q style , async and event loops"
repository = "https://github.com/bcndanos/asynchronous"
documentation = "http://bcndanos.github.io/asynchronous/asynchronous/"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
num_cpus = "0.2.5"

[[example]]
name = "basic"
path = "examples/basic.rs"
test = false
bench = false

[[example]]
name = "event_loop"
path = "examples/event_loop.rs"
test = false
bench = false